visual corrects, check on smaller screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,3 @@
-
-
 .info-card {
   max-width: 400px;
   min-width: 370px;
@@ -21,31 +19,22 @@
   height: 200px; /* Adjust the height as needed */
 }
 
-
-@media (min-width: 941px) {
+@media (min-width: 645px) and (min-height: 600px) {
   .rounded-card {
-    border-radius: 30px;
-    box-shadow: 5px 5px 10px 1px #00000026;
-    min-width: 280px;
     position: fixed;
-    top:0;
+    top: 0;
   }
 }
-@media (max-width: 940px) {
-  .rounded-card {
-    border-radius: 30px;
-    box-shadow: 5px 5px 10px 1px #00000026;
-    min-width: 280px;
-  }
+.rounded-card {
+  border-radius: 30px;
+  box-shadow: 5px 5px 10px 1px #00000026;
+  min-width: 280px;
 }
-
-
 
 .button-cv {
   border-radius: 10px;
   box-shadow: 5px 5px 10px 1px #00000054;
 }
-
 
 .mat-mdc-card-title {
   font-size: 25px;
