--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,10 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
 
-  background-image: url("/assets/img/shades.jpg");
+  background-image: url("./assets/img/shades.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
